# netsci-disease-spread

./: .dockerignore  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  RESUME-HERE.md  dag-20260630-42655989.html  dag-20260630-42683687.html  dag-20260630-43898489.html  dag-20260630-44631005.html  docker-compose.yml  experiment.yaml  nextflow.config  pyproject.toml  report-20260630-42643622.html  report-20260630-42655989.html  report-20260630-42683687.html  report-20260630-43898489.html  report-20260630-44631005.html
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  experiment_proposal.md
.github/workflows/: ci.yml  paper.yml
configs/: europe_air_interdiction.yaml  europe_interdiction.yaml  europe_sir_betweenness.yaml  experiment_multimodal.yaml  toy_sir.yaml
docs/: ARCHITECTURE.md  DATA.md  EXPERIMENTS.md  MAINTENANCE.md  METHODOLOGY.md  README.md  RESEARCH-ROADMAP.md  ROADMAP.md  VISUALIZATION.md  literature-review.md
docs/curated_tex/: appendix.tex  conclusion.tex  discussion.tex  introduction.tex  main.tex  methodology.tex  references.bib  results.tex  sigkddExp.cls
docs/tex/: main.tex  (+21 more)
scripts/: validate_snap.py
src/: __init__.py  cli.py  config.py  experiment.py  paths.py  registry.py
tests/: test_config.py  test_continue.py  test_dashboard.py  test_engine.py  test_experiment.py  test_flows.py  test_interdiction.py  test_models.py  test_netgen.py  test_operating_point.py  test_pipeline.py  test_strategies_extra.py  test_verification.py  test_viz.py
workflow/: main.nf
(+85 files in other folders)
