[project]
name = "netsci-disease-spread"
version = "0.1.0"
description = "Topology-aware immunization of transport networks: compartmental epidemics and the degree-betweenness question."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "TODO" }
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "typer>=0.12",
    "networkx>=3.2",
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "pyarrow>=15.0",
    "pyvis>=0.3.2",
    "plotly>=5.20",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
# Heavy geospatial deps, needed only for OSM/GRIP retrieval (Slice 4).
geo = [
    "osmnx>=1.9",
    "geopandas>=0.14",
]
# Geo-animated outbreak visualisation (Slice 6).
geoviz = [
    "pydeck>=0.8",
]
# The simulator web app: FastAPI dashboard + arq worker (`netsci dashboard`).
dashboard = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "arq>=0.25",
    "redis>=5.0",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
netsci = "src.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
